[package]
name = "domain-client-bundle-pool"
version = "0.1.0"
authors = ["Rahul Subramaniyam <rahul@subspace.network>"]
edition = "2021"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Subspace domain bundle pool."
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
sp-core = { version = "7.0.0", git = "https://github.com/subspace/substrate", rev = "9cf78129a2638d3f370868863d16f4fe32b4ad30" }
sp-domains = { version = "0.1.0", path = "../../../crates/sp-domains" }


