[package]
name = "domain-bundles"
version = "0.1.0"
authors = ["Rahul Subramaniyam <rahul@subspace.network>"]
edition = "2021"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Subspace domain bundles related functionality."
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
async-trait = "0.1.68"
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "9cf78129a2638d3f370868863d16f4fe32b4ad30" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "9cf78129a2638d3f370868863d16f4fe32b4ad30" }
sp-domains = { version = "0.1.0", path = "../../../crates/sp-domains" }


