[package]
name = "domain-eth-service"
version = "0.1.0"
authors = ["Vedhavyas Singareddi <ved@subspace.network>"]
edition = "2021"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Ethereum compatible core component service"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
clap = { version = "4.4.3", features = ["derive"] }
domain-runtime-primitives = { version = "0.1.0", path = "../../primitives/runtime" }
domain-service = { version = "0.1.0", path = "../../service" }
fc-consensus = { version = "2.0.0-dev", git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2" }
fc-db = { version = "2.0.0-dev", git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2", default-features = false }
fc-mapping-sync = { version = "2.0.0-dev", git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2", default-features = false }
fc-rpc = { version = "2.0.0-dev", git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2", default-features = false, features = ['rpc-binary-search-estimate'] }
fc-rpc-core = { version = "1.1.0-dev", git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2" }
fc-storage = { version = "1.0.0-dev", git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2" }
fp-rpc = { version = "3.0.0-dev", git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2", features = ['default'] }
futures = "0.3.28"
jsonrpsee = { version = "0.16.3", features = ["server"] }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-network-sync = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8", default-features = false }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8", default-features = false }
sc-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
serde = { version = "1.0.183", features = ["derive"] }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-inherents = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
