[package]
name = "domain-client-message-relayer"
version = "0.1.0"
authors = ["Vedhavyas Singareddi <ved@subspace.network>"]
edition = "2021"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
description = "Subspace message relayer."
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
async-channel = "1.9.0"
cross-domain-message-gossip = { path = "../../client/cross-domain-message-gossip" }
futures = "0.3.28"
parity-scale-codec = { version = "3.6.5", features = ["derive"] }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-domains = { version = "0.1.0", path = "../../../crates/sp-domains" }
sp-messenger = { version = "0.1.0", path = "../../primitives/messenger" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
tracing = "0.1.37"
