[package]
name = "domain-test-service"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
include = [
	"/src",
	"/Cargo.toml",
]

[dependencies]
domain-client-operator = { version = "0.1.0", path = "../../client/domain-operator" }
domain-service = { version = "0.1.0", path = "../../service" }
domain-test-primitives = { version = "0.1.0", path = "../primitives" }
domain-runtime-primitives = { version = "0.1.0", path = "../../primitives/runtime", default-features = false }
evm-domain-test-runtime = { version = "0.1.0", path = "../runtime/evm" }
fp-account = { version = "1.0.0-dev", default-features = false, features = ["serde"], git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2" }
fp-rpc = { version = "3.0.0-dev", git = "https://github.com/subspace/frontier", rev = "86da7eca262a259b79b5c84314eda49a326debb2", features = ['default'] }
frame-system = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
frame-support = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
rand = "0.8.5"
pallet-transaction-payment = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-client-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-executor = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-network = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-network-sync = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-service = { version = "0.10.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8", default-features = false }
sc-tracing = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-transaction-pool-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sc-utils = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
serde = { version = "1.0.183", features = ["derive"] }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-arithmetic = { version = "16.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-block-builder = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-core = { version = "21.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-domains = { version = "0.1.0", path = "../../../crates/sp-domains" }
sp-keyring = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-messenger = { version = "0.1.0", path = "../../../domains/primitives/messenger" }
sp-offchain = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8", default-features = false }
sp-session = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
sp-transaction-pool = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
subspace-runtime-primitives = { version = "0.1.0", path = "../../../crates/subspace-runtime-primitives" }
subspace-test-client = { version = "0.1.0", path = "../../../test/subspace-test-client" }
subspace-test-service = { version = "0.1.0", path = "../../../test/subspace-test-service" }
substrate-frame-rpc-system = { version = "4.0.0-dev", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
substrate-test-client = { version = "2.0.0", git = "https://github.com/subspace/polkadot-sdk", rev = "c03d8ea246dccdd2c852145e93dbef0443e354c8" }
tokio = { version = "1.32.0", features = ["macros"] }
tracing = "0.1.37"
